--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,16 @@
     "dev": "DEBUG=basic-blog:* nodemon ./bin/wwww"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
     "express": "~4.16.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
