--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "http-errors": "^2.0.0",
