--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
+    "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
