--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "file-type": "^19.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.1"
