Add html entities decoder to models' json

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "file-type": "^19.0.0",
+    "html-entities": "^2.5.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
