--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -11,9 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0"
   },
